<resources>
    <string name="app_name" translatable="false"> XPulseHub </string>

    <!-- Splash Screen -->
    <string name="str_splash"> Loading new adventures and dimensions…\nGet ready to connect. </string>

    <!-- Login Screen -->
    <string name="str_title"> Turn the battle into a spectacle </string>
    <string name="str_subtitle"> As Jhin, coordinate with your allies,\ncreate a symphony of skills and achievements. </string>

    <string name="str_loginDisc"> Login with Discord </string>
    <string name="str_loginGoog"> Login with Google </string>

    <!-- Home Screen -->
    <string name="str_img_title"> Time to Explore\nNew Dimensions </string>
    <string name="str_img_subtitle"> Time to unite in the mystical portal and venture into the unknown </string>

    <string name="str_clearFilter"> Clean filters </string>

    <!-- Category Carrousel -->
    <string-array name="button_texts">
        <item>@string/str_ranked_btn</item>
        <item>@string/str_casual_btn</item>
        <item>@string/str_watch_btn</item>
        <item>@string/str_duel_btn</item>
        <item>@string/str_talk</item>
    </string-array>

    <string name="str_ranked_btn"> Ranked </string>
    <string name="str_casual_btn"> Casual </string>
    <string name="str_watch_btn"> Watch-Party </string>
    <string name="str_duel_btn"> Duel 1v1 </string>
    <string name="str_talk"> Chat </string>

    <!-- Games Div -->
    <string name="str_games_div">Scheduled Matches</string>
    <string name="str_games_empty">No games registered yet, start now!</string>


    <!-- Games -->
    <string name="str_league" translatable="false"> League of Legends </string>
    <string name="str_valorant" translatable="false"> Valorant </string>
    <string name="str_warzone" translatable="false"> COD: Warzone </string>
    <string name="str_apex" translatable="false"> Apex Legends </string>
    <string name="str_minecraft" translatable="false"> Minecraft </string>

    <!-- Activity Screen -->
    <string name="str_activity_players"> Players </string>
    <string name="str_enter_server"> Join the Server </string>

    <!-- Players Status-->
    <string name="str_available"> Available </string>
    <string name="str_busy"> Busy </string>
    <string name="str_unavailable"> Unavailable </string>

    <!-- Players Bagde -->
    <string name="str_user_vip"> Premium </string>
    <string name="str_user_guest"> Guest </string>

    <!-- AddMatch Screen -->
    <string name="str_add_match"> Schedule Match </string>

    <!-- Inputs -->
    <string name="str_category_input"> Category </string>
    <string name="str_search_input"> Search </string>
    <string name="str_total_placeholder" translatable="false"> Total: </string>
    <!-- Category Carrousel -->

    <string name="str_activity_input"> Activity </string>
    <string name="str_activity_placeholder"> Select an activity </string>

    <!-- Activity Drawer -->
    <string name="str_league_type"> MOBA </string>
    <string name="str_valorant_type"> FPS </string>
    <string name="str_warzone_type"> BattleRoyale </string>
    <string name="str_minecraft_type"> Survival </string>
    <string name="str_talk_type"> Talks </string>

    <string name="str_server_input"> Server </string>
    <string name="str_server_placeholder"> Server`s link&#8230; </string>
    <string name="str_add_input"> Schedule </string>

    <string name="str_time_input"> Date and Hour </string>
    <string name="str_date_input"> Day / Month </string>
    <string name="str_hour_input"> Hour / Min </string>

    <string name="str_description_input"> Description </string>
    <string name="str_description_max"> Max: 100 characters </string>


</resources>