<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/home_screen"

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:fitsSystemWindows="true"
    android:orientation="vertical"

    android:background="@color/background_color"

    tools:context=".Screens.HomeScreen">

    <!-- Header -->
    <LinearLayout android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_margin="16dp"

        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@drawable/ic_user"

            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"

                android:textSize="20sp"
                android:text="@string/app_name"
                android:textColor="@color/text_color"
                android:fontFamily="@font/rajdhani_semibold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"

                android:textSize="20sp"
                android:text="@string/str_casual_btn"
                android:textColor="@color/text_color"
                android:fontFamily="@font/rajdhani_semibold"
                />
        </LinearLayout>

        <Space
            android:layout_width="150dp"
            android:layout_height="wrap_content"/>

        <ImageButton android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@drawable/ic_add"
            android:background="@android:color/transparent"
            />


    </LinearLayout>

    <!-- ImageSection-->
    <LinearLayout android:id="@+id/image_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_title"

        android:layout_marginVertical="24dp"

        android:background="@color/tab_half_color"

        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="vertical" >

            <TextView
                android:layout_width="214dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"

                android:textSize="24sp"
                android:textAllCaps="true"
                android:text="@string/str_img_title"
                android:textColor="@color/text_color"
                android:fontFamily="@font/rajdhani_semibold"
                />

            <TextView
                android:layout_width="224dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"

                android:textSize="12sp"
                android:textColor="@color/text_color"
                android:text="@string/str_img_subtitle"
                android:fontFamily="@font/rajdhani_semibold"
                />
        </LinearLayout>

        <ImageView
            android:layout_width="180dp"
            android:layout_height="wrap_content"

            android:src="@drawable/img_section"
            />
    </LinearLayout>

    <!-- Filter Section -->
    <LinearLayout android:id="@+id/filter_section"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        android:gravity="end"

        app:layout_constraintTop_toBottomOf="@id/image_section"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:orientation="horizontal" >

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"

            android:src="@drawable/ic_filter" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/str_clearFilter"
            android:textSize="12sp"
            android:textColor="@color/text_color"
            android:fontFamily="@font/rajdhani_bold"

            android:layout_marginHorizontal="12dp" />
    </LinearLayout>

    <!-- Category Carousel -->
    <FrameLayout android:id="@+id/category_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        app:layout_constraintTop_toBottomOf="@id/filter_section"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <fragment
            android:id="@+id/category_fragment"
            android:name="br.team.xpulse.CategorySection.CategoryFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </FrameLayout>

    <!-- Matches Section -->
    <LinearLayout android:id="@+id/matches_section"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"

        android:orientation="horizontal"

        app:layout_constraintTop_toBottomOf="@id/category_section"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="16sp"
            android:text="@string/str_games_div"
            android:textColor="@color/text_color"
            android:fontFamily="@font/rajdhani_bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1" />

        <TextView android:id="@+id/matches_count"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"

            android:textSize="12sp"
            android:text="@string/str_total_placeholder"
            android:textColor="@color/text_color"
            android:fontFamily="@font/rajdhani_bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"

            android:paddingHorizontal="16dp"

            android:drawableEnd="@drawable/ic_search"
            android:drawablePadding="16dp"

            android:textSize="12sp"
            android:textColor="@color/text_color"

            android:hint="@string/str_search_input"
            android:textColorHint="@color/placeholder_color"

            android:background="@drawable/btn_gradient"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        app:layout_constraintTop_toBottomOf="@id/matches_section"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:orientation="vertical">

        <ImageView android:id="@+id/img_empty"
            android:layout_width="match_parent"
            android:layout_height="280dp"

            android:src="@drawable/img_empty" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"

            android:gravity="center"

            android:textSize="20sp"
            android:text="@string/str_games_empty"
            android:textColor="@color/text_color"
            android:fontFamily="@font/rajdhani_bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>