<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:id="@+id/add_screen"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:fitsSystemWindows="true"
    android:orientation="vertical"

    android:background="@color/tab_color"

    tools:context=".Screens.AddScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/background_color" >

        <!-- Header -->
        <LinearLayout android:id="@+id/header_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:padding="24dp"

            android:background="@color/tab_color"

            android:orientation="horizontal"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton android:id="@+id/btn_back"

                android:layout_width="30dp"
                android:layout_height="30dp"

                android:layout_gravity="center_vertical"
                android:padding="8dp"

                android:src="@drawable/ic_back"
                android:background="@android:color/transparent" />

            <!-- Title -->
            <TextView
                android:id="@+id/title_text"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"

                android:textSize="24sp"
                android:textAlignment="center"
                android:text="@string/str_add_match"
                android:textColor="@color/text_color"
                android:fontFamily="@font/rajdhani_bold" />
        </LinearLayout>

        <!-- Category Input -->
        <LinearLayout android:id="@+id/category_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_layout"

            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"

            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="start"

                android:textSize="24sp"
                android:text="@string/str_category_input"
                android:textColor="@color/text_color"
                android:fontFamily="@font/rajdhani_bold" />

            <!-- Category Carousel -->
            <FrameLayout android:id="@+id/category_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"

                app:layout_constraintTop_toBottomOf="@id/filter_section"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <fragment
                    android:id="@+id/category_fragment"
                    android:name="br.team.xpulse.CategorySection.CategoryFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </FrameLayout>
        </LinearLayout>

        <!-- Activity Input -->
        <LinearLayout android:id="@+id/activity_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/category_input"

            android:layout_marginTop="32dp"
            android:layout_marginStart="24dp"

            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="start"

                android:textSize="24sp"
                android:textColor="@color/text_color"
                android:fontFamily="@font/rajdhani_bold"
                android:text="@string/str_activity_input" />

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"

                android:layout_marginTop="16dp">

                <ImageView android:id="@+id/img_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_centerVertical="true"

                    android:src="@drawable/img_activity" />

                <TextView android:id="@+id/input_activity"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_toEndOf="@id/img_activity"

                    android:layout_centerVertical="true"

                    android:layout_margin="24dp"

                    android:textSize="20sp"
                    android:textColor="@color/text_color"
                    android:fontFamily="@font/rajdhani_bold"
                    android:text="@string/str_activity_placeholder"
                    />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignParentEnd="true"

                    android:layout_centerVertical="true"

                    android:layout_marginEnd="24dp"

                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_forward" />
            </RelativeLayout>
        </LinearLayout>

        <!-- Server Input -->
        <LinearLayout android:id="@+id/server_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_input"

            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="24dp"

            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="start"

                android:layout_marginBottom="16dp"

                android:textSize="24sp"
                android:text="@string/str_server_input"
                android:textColor="@color/text_color"
                android:fontFamily="@font/rajdhani_bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"

                android:padding="16dp"

                android:drawableStart="@drawable/ic_disc"
                android:drawablePadding="16dp"

                android:textSize="20sp"
                android:textColor="@color/text_color"
                android:background="@drawable/btn_gradient"
                android:hint="@string/str_server_placeholder"
                android:textColorHint="@color/placeholder_color"
                />

        </LinearLayout>

        <!-- Date / Hour Input -->
        <LinearLayout android:id="@+id/date_hour_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/server_input"

            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="24dp"

            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="start"

                android:textSize="24sp"
                android:text="@string/str_time_input"
                android:textColor="@color/text_color"
                android:fontFamily="@font/rajdhani_bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"

                android:layout_gravity="center"


                android:orientation="horizontal" >

                <EditText
                    android:layout_width="168dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_gradient"

                    android:padding="16dp"

                    android:layout_marginEnd="16dp"

                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"

                    android:hint="@string/str_date_input"
                    android:textColorHint="@color/placeholder_color" />

                <EditText
                    android:layout_width="168dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_gradient"

                    android:padding="16dp"

                    android:textSize="20sp"
                    android:textColor="@color/text_color"
                    android:textAlignment="center"

                    android:hint="@string/str_hour_input"
                    android:textColorHint="@color/placeholder_color" />
            </LinearLayout>

        </LinearLayout>

        <!-- Description Input -->
        <LinearLayout android:id="@+id/description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_hour_input"

            android:layout_marginTop="32dp"
            android:layout_marginStart="24dp"

            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="start"

                    android:textSize="24sp"
                    android:text="@string/str_description_input"
                    android:textColor="@color/text_color"
                    android:fontFamily="@font/rajdhani_bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="1" />

                <TextView android:id="@+id/description_max"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"

                    android:textSize="12sp"
                    android:text="@string/str_description_max"
                    android:textColor="@color/text_color"
                    android:fontFamily="@font/rajdhani_medium"

                    android:layout_gravity="center_vertical"
                    />

            </LinearLayout>

            <EditText
                android:layout_width="368dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"

                android:background="@drawable/btn_gradient"

                android:textSize="12sp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/placeholder_color"
                />

        </LinearLayout>

        <Button android:id="@+id/btn_add_match"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_margin="24dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_input"

            android:backgroundTint="@color/primary_color"

            android:textSize="20sp"
            android:textAllCaps="true"
            android:text="@string/str_add_input"
            android:fontFamily="@font/rajdhani_bold"
            android:textColor="@color/background_color"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="1"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_add_match" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
