<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/main"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:fitsSystemWindows="true"

    android:background="@color/background_color"

    tools:context=".Screens.MainActivity">

    <ImageView
        android:id="@+id/img_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/img_login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:textSize="36sp"
        android:text="@string/str_title"
        android:textColor="@color/text_color"
        android:fontFamily="@font/rajdhani_bold"
        app:layout_constraintTop_toBottomOf="@id/img_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txt_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="24sp"
        android:text="@string/str_subtitle"
        android:textColor="@color/text_color"
        android:fontFamily="@font/rajdhani_medium"
        app:layout_constraintTop_toBottomOf="@id/txt_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/login_disc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:drawableLeft="@drawable/ic_disc"
        android:backgroundTint="@color/primary_color"
        android:drawablePadding="24dp"
        android:textSize="20sp"
        android:text="@string/str_loginDisc"
        android:fontFamily="@font/rajdhani_bold"
        android:textColor="@color/background_color"
        android:layout_margin="40dp"
        app:layout_constraintTop_toBottomOf="@id/txt_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
